--- a/ocaml-poker/web/index.html
+++ b/ocaml-poker/web/index.html
@@ -4,68 +4,156 @@
     <meta charset="utf-8"/>
     <title>Texas Hold'em — 2 Players</title>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
+
     <style>
-      :root { --bg:#0b1220; --panel:#111a2e; --chip:#182440; --text:#e8eef6; --muted:#9fb0d1; --accent:#2c3a63; }
-      * { box-sizing: border-box; }
-      body { background:var(--bg); color:var(--text); margin:0; font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif; }
-      .wrap { max-width: 980px; margin: 32px auto; padding: 0 16px; }
-      .card { background:var(--panel); border-radius:16px; padding:20px; box-shadow:0 8px 24px rgba(0,0,0,.35); }
-      h1 { margin:0 0 16px; font-size:24px; }
-      .names { display:flex; gap:8px; margin-bottom:12px; flex-wrap: wrap; align-items:center; }
-      .names input { padding:10px 12px; border-radius:12px; border:1px solid var(--accent); background:#0f1628; color:var(--text); }
-      .names button { padding:10px 14px; border:0; border-radius:12px; cursor:pointer; background:var(--accent); color:#fff; }
-      .pill { background:var(--chip); padding:8px 12px; border-radius:999px; font-size:14px; color:var(--muted); }
-      .row { display:flex; gap:12px; align-items:center; flex-wrap: wrap; }
-      .table { display:grid; grid-template-rows:auto auto auto auto; gap:14px; }
-      .section-title { font-size:13px; color:var(--muted); margin-right:8px; }
-
-      /* Playing cards (CSS) */
-      .cards { display:flex; gap:10px; align-items:center; }
-      .playing-card, .card-back {
-        width:72px; height:100px; border-radius:10px; box-shadow:0 3px 10px rgba(0,0,0,.35);
-        background:#fff; color:#111; display:flex; flex-direction:column; justify-content:space-between;
-        padding:6px; position:relative;
+      :root{
+        --bg:#0b1220; --panel:#111a2e; --panel2:#0f1628;
+        --chip:#182440; --text:#e8eef6; --muted:#9fb0d1;
+        --accent:#2c3a63; --green:#1f8f5f; --red:#c34a4a;
       }
-      .playing-card.red { color:#b31c1c; }
-      .rank { font-weight:700; font-size:18px; line-height:1; }
-      .suit { font-size:18px; line-height:1; align-self:flex-end; }
-      .pip { position:absolute; inset:0; display:flex; align-items:center; justify-content:center; font-size:26px; opacity:.12; }
-      .card-back { background:linear-gradient(135deg, #2f3d6e, #1b2443); color:#fff; justify-content:center; align-items:center; }
-      .card-back::after { content:"♦"; font-size:28px; opacity:.5; }
+      *{box-sizing:border-box}
+      body{margin:0; font-family:system-ui,-apple-system,Segoe UI,Roboto,sans-serif; background:var(--bg); color:var(--text)}
+      .wrap{max-width:980px; margin:0 auto; padding:22px}
+      .title{font-size:26px; font-weight:800; margin:0 0 14px}
+      .card{background:linear-gradient(180deg,var(--panel),var(--panel2)); border:1px solid rgba(255,255,255,.08);
+        border-radius:18px; padding:16px; box-shadow:0 10px 30px rgba(0,0,0,.25); margin-bottom:14px}
+      .grid2{display:grid; grid-template-columns:1fr 1fr; gap:14px}
+      @media (max-width:820px){ .grid2{grid-template-columns:1fr} }
+      label{display:block; font-size:12px; color:var(--muted); margin:8px 0 6px}
+      input{
+        width:100%; padding:10px 12px; border-radius:12px; border:1px solid rgba(255,255,255,.12);
+        background:#0b1020; color:var(--text); outline:none;
+      }
+      .row{display:flex; gap:10px; align-items:center; flex-wrap:wrap}
+      .board-row { 
+        margin-top: 14px; 
+      }
+      .btn{
+        padding:10px 14px; border-radius:12px; border:1px solid rgba(255,255,255,.14);
+        background:#0b1020; color:var(--text); font-weight:700; cursor:pointer;
+      }
+      .btn:hover{border-color:rgba(255,255,255,.28)}
+      .btn.primary{background:var(--accent)}
+      .btn.ghost{background:transparent}
+      .btn:disabled{opacity:.55; cursor:not-allowed}
+      .msg{margin-top:10px; color:#ffd27a; min-height:18px}
+      .hint{color:var(--muted); font-size:12px; margin-top:8px}
 
-      .seats { display:flex; justify-content:space-between; gap:16px; }
-      .seat { flex:1; background:#0e1730; border-radius:14px; padding:12px; }
-      .seat h3 { margin:0 0 8px; font-size:15px; color:var(--muted); }
-      .actions { display:flex; gap:10px; flex-wrap:wrap; align-items:center; }
-      .actions button { padding:10px 14px; border:0; border-radius:12px; cursor:pointer; background:var(--accent); color:white; }
-      .actions input[type="number"]{ width:100px; padding:10px; border-radius:10px; border:1px solid var(--accent); background:#0f1628; color:var(--text); }
-      .seat .reveal { margin-top:10px; padding:10px 14px; border:0; border-radius:12px; cursor:pointer; background:var(--accent); color:white; }
-      .seat .reveal:hover, .actions button:hover, .names button:hover { filter:brightness(1.1); }
-      .footer { opacity:.6; font-size:12px; margin-top:10px; }
-      .warn { color:#ffb4a3; }
+      /* poker UI classes used by app.ml */
+      .table{padding:10px}
+      .pill{display:inline-flex; align-items:center; gap:6px; background:var(--chip);
+        border:1px solid rgba(255,255,255,.10); color:var(--muted);
+        border-radius:999px; padding:6px 10px; font-size:12px; font-weight:700}
+      .section-title{color:var(--muted); font-size:12px; font-weight:800; margin-right:10px}
+      .cards{display:flex; gap:10px; align-items:center; flex-wrap:wrap}
+      .seats{display:grid; grid-template-columns:1fr 1fr; gap:12px; margin-top:12px}
+      @media (max-width:820px){ .seats{grid-template-columns:1fr} }
+      .seat{background:rgba(255,255,255,.04); border:1px solid rgba(255,255,255,.08); border-radius:16px; padding:12px}
+      .seat-head{display:flex; justify-content:space-between; align-items:baseline; gap:10px; margin-bottom:8px}
+      .seat-name{font-size:16px; font-weight:800}
+      .seat-chips{font-size:12px; color:var(--muted); font-weight:800}
+      .actions{display:flex; gap:10px; align-items:center; flex-wrap:wrap; margin-top:12px}
+      .warn{color:var(--muted); font-weight:700}
 
-      @media (max-width: 640px) { .playing-card, .card-back { width:56px; height:78px; } }
+      .playing-card{
+        width:62px; height:86px; border-radius:12px;
+        background:#f8fbff; color:#0b1220; border:1px solid rgba(0,0,0,.14);
+        position:relative; box-shadow:0 10px 18px rgba(0,0,0,.22);
+        display:flex; align-items:center; justify-content:center;
+      }
+      .playing-card.red{color:var(--red)}
+      .playing-card.black{color:#121826}
+      .playing-card .rank{position:absolute; top:6px; left:8px; font-weight:900}
+      .playing-card .suit{position:absolute; top:22px; left:8px; font-size:14px}
+      .playing-card .pip{font-size:26px; opacity:.85}
+      .card-back{
+        width:62px; height:86px; border-radius:12px;
+        border:1px solid rgba(255,255,255,.18);
+        background:repeating-linear-gradient(45deg, #1b2750, #1b2750 8px, #132042 8px, #132042 16px);
+        box-shadow:0 10px 18px rgba(0,0,0,.22);
+      }
+
+      .reveal-btn{margin-top:10px}
     </style>
   </head>
+
   <body>
     <div class="wrap">
-      <div class="card">
-        <h1>Texas Hold'em — 2 Players (no raises)</h1>
+      <div class="title">Texas Hold'em — 2 Players</div>
 
-        <div class="names">
-          <input id="p1" placeholder="Player 1" />
-          <input id="p2" placeholder="Player 2" />
-          <button id="start">Start Hand</button>
-          <span id="msg" class="warn"></span>
+      <!-- AUTH -->
+<!-- AUTH -->
+<div class="card" id="authCard">
+  <!-- shown when NOT logged in -->
+  <div class="grid2" id="authForms">
+    <div>
+      <div style="font-weight:900; margin-bottom:6px">Create account</div>
+      <label>Your name</label>
+      <input id="signupName" placeholder="Name" />
+      <label>Email</label>
+      <input id="signupEmail" placeholder="you@columbia.edu" />
+      <label>Password</label>
+      <input id="signupPass" type="password" placeholder="••••••••" />
+      <div class="row" style="margin-top:10px">
+        <button id="btnSignup" class="btn primary">Sign up</button>
+      </div>
+    </div>
+
+    <div>
+      <div style="font-weight:900; margin-bottom:6px">Sign in</div>
+      <label>Email</label>
+      <input id="loginEmail" placeholder="you@columbia.edu" />
+      <label>Password</label>
+      <input id="loginPass" type="password" placeholder="••••••••" />
+      <div class="row" style="margin-top:10px">
+        <button id="btnLogin" class="btn primary">Sign in</button>
+      </div>
+    </div>
+  </div>
+
+  <!-- shown when logged in -->
+  <div id="authAuthed" style="display:none">
+    <div class="row" style="justify-content:space-between; width:100%">
+      <div>
+        <div style="font-weight:900">Signed in</div>
+        <div style="color:var(--muted); font-weight:700; margin-top:4px">
+          <span id="authedName"></span>
+          <span style="opacity:.6">•</span>
+          <span id="authedEmail"></span>
+          <span style="opacity:.6">•</span>
+          <span id="authedChips"></span>
+        </div>
+      </div>
+      <button id="btnLogout" class="btn ghost">Sign out</button>
+    </div>
+  </div>
+
+  <div id="msg" class="msg"></div>
+</div>
+
+
+      <!-- GAME CONTROLS -->
+      <div class="card">
+        <div class="row">
+          <div style="flex:1; min-width:200px">
+            <label>Player 1</label>
+            <input id="p1" placeholder="(auto from account name)" />
+          </div>
+          <div style="flex:1; min-width:200px">
+            <label>Player 2</label>
+            <input id="p2" value="Player 2" />
+          </div>
+          <div style="margin-top:22px">
+            <button id="start" class="btn primary">Start hand</button>
+          </div>
         </div>
 
         <div id="app"></div>
-
-        <div class="footer">
-          If you don’t see changes, rebuild then refresh: <code>dune build web/app.bc.js</code>
-        </div>
       </div>
     </div>
+
+    <!-- IMPORTANT: app.bc.js first, then firebase.js so callbacks exist -->
     <script defer src="../_build/default/web/app.bc.js"></script>
+    <script type="module" src="./firebase.js"></script>
   </body>
 </html>
